--- a/package.json
+++ b/package.json
@@ -18,7 +18,24 @@
   },
   "homepage": "https://github.com/geeofree/twitter-analyzer#readme",
   "dependencies": {
+    "babel-core": "^6.25.0",
     "prompt": "^1.0.0",
-    "twitter": "^1.7.1"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2",
+    "twitter": "^1.7.1",
+    "webpack": "^3.3.0"
+  },
+  "devDependencies": {
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "sass-loader": "^6.0.6",
+    "webpack-dev-server": "^2.5.1"
   }
 }
