--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "cmd.auth.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server",
+    "start": "node ./TwitterAPI/server.twitter.js",
+    "dev-server": "webpack-dev-server",
     "build": "webpack"
   },
   "repository": {
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/geeofree/twitter-analyzer#readme",
   "dependencies": {
     "babel-core": "^6.25.0",
+    "express": "^4.15.3",
     "prompt": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
