--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
+    "socket.io": "^2.0.3",
     "twitter": "^1.7.1",
     "webpack": "^3.3.0"
   },
