Rename TwitterAPI directory to just server

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "cmd.auth.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon TwitterAPI/server.js --exec babel-node",
-    "prod-server-build": "babel ./TwitterAPI -d prod",
+    "start": "nodemon server/server.js --exec babel-node",
+    "prod-server-build": "babel ./server -d prod",
     "serve": "node prod/server.twitter.js",
     "dev-server": "webpack-dev-server",
     "build": "webpack"
